--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bansach
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 server.port=8081
 jwt.token.prefix=Bearer
@@ -24,7 +24,7 @@ endpoints.cors.allowed-origins=*
 localhost.path.client.user=http://localhost:4200,http://127.0.0.1:5501
 spring.mail.host=smtp.gmail.com
 spring.mail.username=hungnmk5@gmail.com
-spring.mail.password=pbhcgdwxskmiyhbq
+spring.mail.password=tyksztbryniyzvjx
 spring.mail.port=587
 spring.mvc.dispatch-options-request=true
 spring.mail.properties.mail.smtp.auth=true
